--- a/Trinity/templates/docs/test.html
+++ b/Trinity/templates/docs/test.html
@@ -5,7 +5,6 @@
     <title></title>
   </head>
   <body>
-    <h1>Hello</h1>
-    <p>Dis is the main page</p>
+    <h1>Hello Docs</h1>
   </body>
 </html>
