--- a/Trinity/templates/mesh/test.html
+++ b/Trinity/templates/mesh/test.html
@@ -2,10 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Trinity Mesh</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <h1>Hello</h1>
     <p>Dis is the main page</p>
+
+    <div class="container">
+      {% for key, value in context.items %}
+      <div class="jumbotron">
+        {{ key }}
+        <hr>
+        {% for key2,value2 in value.items %}
+            {{ key2 }} : {{value2}} <br>
+        {% endfor %}
+      </div>
+    {% endfor %}
+</div>
   </body>
 </html>
